--- a/ui/wizard/ui_column_editor.ui
+++ b/ui/wizard/ui_column_editor.ui
@@ -87,6 +87,9 @@
        <property name="editable">
         <bool>false</bool>
        </property>
+       <property name="insertPolicy">
+        <enum>QComboBox::InsertAlphabetically</enum>
+       </property>
       </widget>
      </item>
      <item row="4" column="1">
