--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -39,8 +39,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>604</width>
-        <height>516</height>
+        <width>608</width>
+        <height>527</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -333,17 +333,10 @@
          </layout>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <widget class="QLabel" name="label_9">
          <property name="text">
           <string>Upgrade STDM Configuration to 1.4 </string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_6">
-         <property name="text">
-          <string>Supporting documents folder</string>
          </property>
         </widget>
        </item>
@@ -351,6 +344,13 @@
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Set current profile</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Supporting documents folder</string>
          </property>
         </widget>
        </item>
@@ -390,7 +390,7 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="QPushButton" name="upgradeButton">
          <property name="text">
           <string>Upgrade</string>
@@ -404,6 +404,13 @@
            <width>0</width>
            <height>30</height>
           </size>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QCheckBox" name="chk_logging">
+         <property name="text">
+          <string>Debug logging</string>
          </property>
         </widget>
        </item>
